...
            android:text="@string/add_profile_required"
            android:textColor="@color/oppiaPrimaryText"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/add_profile_activity_user_image_view" />

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_profile_activity_user_name"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
...
            app:errorMessage="@{viewModel.nameErrorMsg}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_profile_activity_required_heading_text_view">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/add_profile_activity_user_name_edit_text"
              style="@style/TextInputEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionDone"
              android:maxLength="36"
              android:singleLine="true"
              android:text="@{viewModel.inputName}" />
          </com.google.android.material.textfield.TextInputLayout>

          <CheckBox
            android:id="@+id/add_profile_activity_pin_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:minHeight="48dp"
            android:text="@string/add_profile_create_a_3_digit_pin"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="@{viewModel.createPin ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@+id/add_profile_activity_pin_check_box">

            <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/add_profile_activity_pin"
              style="@style/TextInputLayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="28dp"
              android:layout_marginTop="24dp"
              android:layout_marginEnd="28dp"
...
              app:errorMessage="@{viewModel.pinErrorMsg}"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent">

              <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_profile_activity_pin_edit_text"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:text="@{viewModel.inputPin}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/add_profile_activity_confirm_pin"
              style="@style/TextInputLayout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="28dp"
              android:layout_marginTop="24dp"
              android:layout_marginEnd="28dp"
...
              app:errorMessage="@{viewModel.confirmPinErrorMsg}"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/add_profile_activity_pin">

              <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_profile_activity_confirm_pin_edit_text"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLength="3"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
          </androidx.constraintlayout.widget.ConstraintLayout>

          <Button
            android:id="@+id/add_profile_activity_create_button"
            style="@style/StateButtonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="28dp"
            android:background="@{viewModel.isButtonActive() ? @drawable/state_button_primary_background : @drawable/start_button_transparent_background}"
...
